# mqtheseuswork

./: .dockerignore  .editorconfig  .env.example  .env.live.template  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.migrate  Dockerfile.public  Dockerfile.scheduler  FOUNDERS_READING_AND_RESEARCH.md  METHODOLOGICAL_REORIENTATION.md  Makefile  README.md  SETUP_GITHUB.sh  THE_META_METHOD.md  TODO.md  WAVE3_TODO_STORE_HELPER.md  build_claude_code_prompts.py  cc_stream_formatter.py  docker-compose.currents.yml  docker-compose.dev.yml  docker-compose.yml  format_stream_claude.py  pyproject.toml  requirements.txt  run_currents_prompts.sh  run_prompts.sh  run_prompts_codex.sh  sync.sh  synthesizer_budget.json
current_events_api/: .env.example  conftest.py  pyproject.toml
current_events_api/current_events_api/: __init__.py  boot_check.py  deps.py  event_bus.py  main.py  metrics.py  publisher.py  rate_limit.py  schemas.py  sse.py
current_events_api/current_events_api/routes/: __init__.py  algorithms.py  algorithms_stream.py  currents.py  decision_trace.py  dialectic_live.py  followup.py  forecasts.py  forecasts_followup.py  forecasts_stream.py  health.py  knowledge_graph.py  operator.py  oracle.py  portfolio.py  portfolio_equities.py  stream.py
current_events_api/tests/: conftest.py  test_algorithms_stream.py  test_forecasts_stream.py  test_rate_limit.py  test_readyz.py  test_routes_currents.py  test_routes_followup.py  test_routes_forecasts.py  test_routes_operator.py  test_routes_portfolio.py  test_routes_portfolio_unified.py  test_sse.py
dialectic/: README.md  dialectic.spec  pyproject.toml  requirements.txt  run.py
dialectic/assets/: Dialectic.icns
dialectic/dialectic/: __init__.py  __main__.py  analyzer.py  argument_map_builder.py  audio.py  auto_title.py  auto_trim.py  batch_transcriber.py  build_info.py  cloud_uploader.py  codex_upload.py  config.py  credentials.py  dashboard.py  interlocutor.py  live_recorder.py  login_dialog.py  pending_queue.py  recording_modal.py  recording_pipeline.py  resources.py  session_writer.py  speaker_consistency.py  speaker_profile.py  transcriber.py  tts_sidecar.py  updater.py  voice_profile.py
dialectic/dialectic/_prompts/: auto_title_system.md  live_extractor_system.md
dialectic/dialectic/exports/: __init__.py  (+1 more)
dialectic/installer/: dialectic.nsi  dmg-settings.json
dialectic/scripts/: build_macos.sh  build_windows.ps1  generate_icons.py  write_build_info.py
dialectic/tests/: test_argument_map_builder.py  test_audio_vad.py  test_auto_title.py  test_auto_trim.py  test_batch_transcriber.py  test_codex_upload.py  test_credentials.py  test_dialectic_ingest_roundtrip.py  test_interlocutor.py  test_live_recorder.py  test_modal_smoke.py  test_pending_queue.py  test_pipeline_invariants.py  test_recording_modal.py  test_recording_pipeline_stubs.py  test_resources.py  test_speaker_profile.py  test_updater.py  test_voice_profile.py
noosphere/: .import-linter  CONCLUSIONS_API.md  CONCLUSIONS_USAGE.md  README.md  alembic.ini  noosphere.spec  pyproject.toml  requirements.txt  synthesizer_budget.json
noosphere/alembic/: env.py
noosphere/assets/: Noosphere.icns
noosphere/installer/: dmg-settings.json  noosphere.nsi
noosphere/noosphere/: __init__.py  __main__.py  adversarial.py  auth.py  backup_restore.py  claim_extractor.py  classifier.py  cli.py  codex_bridge.py  codex_methodology.py  codex_methodology_reanalysis.py  coherence.py  conclusions.py  config.py  embed_pass.py  embedding_pipeline.py  embeddings.py  frozen_support.py  geometry.py  ids.py  inference.py  ingest_artifacts.py  ingester.py  llm.py  meta_analysis.py  methodology.py  models.py  observability.py  ontology.py  orchestrator.py  redteam.py  relevant_text.py  research_advisor.py  resolution.py  retrieval.py  scoring.py  storage_client.py  store.py  synthesis.py  temporal.py  (+6 more)
noosphere/scripts/: audit_currents_dialectic.py  backfill_aim_method_fit.sh  build_cross_model_pdf.py  build_macos.sh  build_windows.ps1  cleanup_shadow_rows.py  diagnose_currents_pipeline.py  diagnose_post_run.py  distill_principles.py  dump_method_graph.py  fit_severity_model.sh  generate_icons.py  inspect_corpus_tables.py  make_smoke_audio.py  probe_db_urls.py  promote_proposals.py  rebuild_locality_index.py  reextract_corpus.py  refresh_contradiction_exemplars.py  run_cross_model_full.sh  run_cross_model_study.sh  run_first_auto_paper.sh  run_first_digest.sh  run_householder_ablation.sh  run_principle_distillation.sh  run_qh_full.sh  run_redteam_tournament.sh  run_redteam_tournament_v1.sh  run_resolution_backfill.sh  run_seasonal_review.sh  run_self_critique_pass.sh  run_transfer_study.sh  schedule_methodology_review_week.sh  train_agreement_model.sh  triage_principles.py
noosphere/tests/: conftest.py  mock_adapter.py  test_abstention.py  test_adapter_claim_review.py  test_adapter_gjp.py  test_adapter_metaculus.py  test_adapter_replication.py  test_adversarial.py  test_agent_reasoner.py  test_agreement_model.py  test_aim_method_fit.py  test_algorithm_calibration.py  test_algorithm_drafter.py  test_algorithm_input_resolver.py  test_algorithm_retirement.py  test_algorithm_runtime.py  test_algorithm_store.py  test_algorithm_validators.py  test_alpaca_client.py  test_alpaca_ingestor.py  test_analogical_transfer.py  test_article_generator.py  test_articles_export.py  test_articles_export_polish.py  test_articles_quality_gate.py  test_articles_weekly_cap.py  test_auto_accept_principles.py  test_auto_live_dispatch.py  test_auto_paper_dispatch.py  test_auto_paper_integration.py  test_auto_resolver.py  test_bayesian_network.py  test_bet_lifecycle.py  test_bet_spec.py  test_budget_enforcement.py  test_budget_persistence.py  test_cascade_cut.py  test_cascade_cycle.py  test_cascade_declaration_parity.py  test_cascade_edges.py  (+236 more)
researcher_api/: README.md  pyproject.toml
researcher_api/researcher_api/: __init__.py  audit.py  claims_util.py  config.py  main.py  problem.py  rate_limit.py  scoring_hosted.py
researcher_api/tests/: conftest.py  test_researcher_api.py  test_round3_routes.py
(+2832 files in other folders)
