[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theseus"
version = "0.0.0"
description = "Theseus monorepo (Python packages: noosphere, dialectic)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "alembic>=1.13",
    "black>=24.3",
    "mypy>=1.11",
    "openai>=1.40",
    "pydantic-settings>=2.2",
    "pytest>=8.3",
    "ruff>=0.8",
    "sqlmodel>=0.0.22",
    "structlog>=24.1",
]

[tool.setuptools.packages.find]
where = ["noosphere", "dialectic"]
include = ["noosphere", "noosphere.*", "dialectic", "dialectic.*"]
exclude = ["tests*", "scripts*", "installer*", "assets*", "alembic*"]

# ---- Ruff ----
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["noosphere", "dialectic"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "N",   # pep8-naming — enforces docs/architecture/Naming_Conventions.md
]
# Ruff's `N` ruleset is the line-by-line enforcement of the Python
# naming conventions. The repo-wide gate
# (`scripts/check_naming_conventions.py`) uses a baseline for
# grandfathered drift; ruff catches violations in *new* code at edit
# time.
ignore = [
    # N818: "exception name should end in Error". The firm uses
    # `XxxRaised`-style names for control-flow signals that are not
    # strictly errors; renaming them is a follow-up.
    "N818",
]

[tool.ruff.lint.isort]
known-first-party = ["noosphere", "dialectic"]

[tool.ruff.lint.per-file-ignores]
# Qt event handlers override camelCase parent methods — names are
# imposed by PyQt/PySide and cannot be renamed (N802).
"dialectic/dialectic/recording_modal.py" = ["N802"]
"dialectic/dialectic/dashboard.py" = ["N802"]
# http.server overrides require `do_GET`/`do_POST` exactly (N802).
"tests/e2e/conftest.py" = ["N802"]
# Test names occasionally encode mathematical thresholds (capital K,
# N) by design — e.g. `test_typed_confirmation_kicks_in_above_K`.
"noosphere/tests/test_revision.py" = ["N802"]
"noosphere/tests/test_ci_round3_invariants.py" = ["N802"]

# ---- Black ----
[tool.black]
target-version = ["py311"]
line-length = 88
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | \.next
)/
'''

# ---- Mypy ----
[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

# ---- Pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["noosphere/tests", "dialectic/tests", "tests/e2e", "tests/integration"]
pythonpath = ["noosphere", "dialectic", "current_events_api", "."]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end cross-wave smoke (Dialectic → Codex → Noosphere). Gated so default `pytest -q` stays fast.",
    "integration: Round-19 algorithm-layer integration tests under tests/integration. Hermetic — no live LLM, no HTTP — but slower than unit-scale tests.",
]
