[project]
name = "theseus-current-events-api"
version = "0.1.0"
description = "FastAPI service for Theseus Currents live opinions and follow-up SSE"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["current_events_api*"]
