[project]
name = "noosphere"
version = "0.1.0"
description = "The Brain of the Firm — epistemological engine for Theseus"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    # HNSW ANN is the production locality substrate. Pin exactly because
    # serialization compatibility and recall determinism depend on hnswlib's
    # binary index format and construction parameters.
    "hnswlib==0.8.0",
]

[project.scripts]
noosphere = "noosphere.__main__:main"

[project.optional-dependencies]
# Local transcription via faster-whisper (CTranslate2 backend). Heavy:
# pulls in ctranslate2 + onnxruntime wheels (~150 MB). Dialectic already
# ships the same stack, so on a monorepo checkout this is a no-op. Keep
# optional so text/PDF-only ingest stays lean.
audio = [
    "faster-whisper >= 1.0, < 2.0",
    "mutagen >= 1.47",
]
# Cloud Whisper fallback (OpenAI). Imported lazily — only required when
# faster-whisper is unavailable or NOOSPHERE_FORCE_OPENAI_WHISPER=1.
whisper-openai = [
    "openai >= 1.30",
]
# PDF text extraction (pypdf). OCR fallback for scanned PDFs uses
# `ocrmypdf` from PATH (system-installed via brew/apt) and is gated on
# NOOSPHERE_ENABLE_OCR=1 — not a pip-installable extra.
pdf = [
    "pypdf >= 5.0",
]
# Test-only dependencies for synthesizing PDF fixtures at test time.
dev = [
    "reportlab >= 4.0",
    "Pillow >= 10.0",
]
# Optional Robinhood live-equity adapter. Robinhood does NOT publish a
# supported retail trading API; this depends on the reverse-engineered
# `robin_stocks` library, which upstream Robinhood app releases periodically
# break. The adapter is OFF by default and is documented in the operator
# console with a yellow risk banner whenever enabled.
robinhood = [
    "robin_stocks >= 3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["noosphere*"]
exclude = ["tests*", "scripts*", "alembic*"]
